--- a/styles.css
+++ b/styles.css
@@ -898,7 +898,7 @@ details[open] summary::before {
   
 
   header{
-    height: 80vh; 
+    height: 100vh; 
   }
   
   .links {
@@ -1030,7 +1030,7 @@ details[open] summary::before {
   h1 {
     margin: 0;
     font-family: 'b', sans-serif;
-    font-size: 4rem;
+    font-size: 3.5rem;
     line-height: 120%;
     background: var(--light-color);
     background-clip: text;
@@ -1567,6 +1567,12 @@ details[open] summary::before {
   pointer-events: none;
 }
 
+@media (max-width: 599px) {
+  .circle:hover::after {
+    font-size: 0.8rem;
+  }
+}
+
 /* Треугольный уголок подсказки */
 .circle:hover::before {
   content: '';
@@ -1733,6 +1739,12 @@ details[open] summary::before {
   pointer-events: none;
 }
 
+@media (max-width: 599px) {
+  .point-map:hover::after {
+    font-size: 0.8rem;
+  }
+}
+
 /* Треугольный уголок подсказки */
 .point-map:hover::before {
   content: '';
@@ -1875,14 +1887,9 @@ details[open] summary::before {
   left: 55%;
 }
 
-.romb-map-2 {
-  top: 35%;
-  left: 65%;
-}
-
 .romb-map-3 {
   top: 20%;
-  left: 20%;
+  left: 10%;
 }
 
 /* Скрываем вторую картинку изначально */
@@ -1894,7 +1901,6 @@ details[open] summary::before {
 .map-container {
   position: relative;
   width: 100%;
-  overflow: hidden;
 }
 
 .map-img {
@@ -1906,6 +1912,13 @@ details[open] summary::before {
   object-fit: contain;
   transition: all 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   backface-visibility: hidden;
+}
+
+@media (max-width: 599px) {
+  .map-img {
+    width: 80%;
+    height: auto;
+  }
 }
 
 .map-img.default-map {
