--- a/styles.css
+++ b/styles.css
@@ -294,7 +294,6 @@ h2 {
   color: var(--accent1-color);
 }
 
-
 .offer p {
   font-family: 'l', sans-serif;
   font-size: 1.50rem;
@@ -307,8 +306,6 @@ h2 {
   position: absolute;
   bottom: 20%;
 }
-
-
 
 .offer {
   display: flex;
@@ -329,7 +326,6 @@ h2 {
   width: 9.38rem;
 }
 
-
 .links {
 	display: flex;
 	cursor: pointer;
@@ -338,7 +334,6 @@ h2 {
   color: var(--light-color);
   font-size: 0.9rem;
 }
-
 
 #links.active {
   font-size: 1rem;
@@ -379,6 +374,17 @@ h2 {
   gap: 1rem;
   max-width: 75%;
   margin: 2rem auto;
+  margin-top: 0rem;
+  margin-bottom: 3rem;
+}
+
+.indicator_container_one {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  max-width: 75%;
+  margin: 0rem auto;
+  margin-bottom: 1rem;
 }
 
 .indicator_item {
@@ -463,19 +469,15 @@ button img {
   box-sizing: border-box; /* Включение padding в ширину */
 }
 
-  .content {
-    width: 75%;
-  }
-
+.content {
+  width: 75%;
+}
 
 .grid-text {
   display: flex;
   justify-content: center;
   gap: 1rem;
 }
-
-
-
 
 .part {
   font-family: 'r', sans-serif;
@@ -594,6 +596,7 @@ details[open] summary::before {
   border: 0.12rem solid var(--accent2-color);*/
   background-color: var(--light-color);
   margin: 0 auto;
+  margin-bottom: 4rem;
 }
 
 .tab_header {
@@ -650,6 +653,7 @@ details[open] summary::before {
     max-height: none;
     overflow: visible;
     flex: 1 0 100%;
+    margin-bottom: 0rem;
   }
 }
 
@@ -715,7 +719,6 @@ details[open] summary::before {
   margin-top: 0.5rem
 }
 
-
 /* Разделительная линия */
 .footer__line {
   border-top: 0.06rem solid var(--light-color);
@@ -739,8 +742,7 @@ details[open] summary::before {
   margin: 0 auto;
 }
 
-
- /* CSS для скрытия горизонтального скролла */
+/* CSS для скрытия горизонтального скролла */
 
 #slider {
   overflow-x: scroll;
@@ -815,8 +817,7 @@ details[open] summary::before {
     width: 49vw;
     cursor: grab;
     border-radius: 2vw;
-  }
-  
+  }  
   
   .s1, .s2, .s3, .s4, .s5, .s6, .s7, .s8, .s9, .s10, .s11, .s12, .s13, .s14, .s15, .s16, .s17
   {background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.3)); background-attachment: fixed; background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;} 
@@ -826,11 +827,14 @@ details[open] summary::before {
     max-width: 70%;
   }
 
+  .indicator_container_one {
+    max-width: 70%;
+  }
+
   html {
     font-size: 1rem;
     
   }
-
  
   .container_start {
     width: 70%;
@@ -842,8 +846,7 @@ details[open] summary::before {
 
   .content {
     width: 70%;
-  }
-  
+  }  
 
   .container_mini {
     width: 100%;
@@ -853,8 +856,7 @@ details[open] summary::before {
 
   .container {
     width: 100%;
-  }
- 
+  } 
   
   .tab_container {
     width: 70%;
@@ -883,59 +885,60 @@ details[open] summary::before {
   max-width: 86%;
 }
 
-  .container_start {
-    width: 86%;
-  }
+.indicator_container_one {
+  max-width: 86%;
+}
 
-  .arrow {
-    opacity: 1;
-  }
+.container_start {
+  width: 86%;
+}
 
-  .content {
-    width: 86%;
-  }
+.arrow {
+  opacity: 1;
+}
 
-  .container_mini {
-    width: 100%;
-    max-width: 100%;
+.content {
+  width: 86%;
+}
 
-  }
+.container_mini {
+  width: 100%;
+  max-width: 100%;
 
-  .container {
-    width: 100%;
-  }
-  
+}
 
-  header{
-    height: 100vh; 
-  }
-  
-  .links {
-    display: none;
-  }
-  
-  .burger {
-    display: flex;
-  } 
-  
-  
-  .tab_container {
-    width: 86%;
-  }
-  
-  .dksjeowi {
-    width: 86%;
-  }
-  
-  .kjdhxowq {
-    width: 86%;
-  }
-  
+.container {
+  width: 100%;
+}  
 
-  
-  .grid-text img {
-    display: none;
-  }
+header{
+  height: 100vh; 
+}
+
+.links {
+  display: none;
+}
+
+.burger {
+  display: flex;
+}   
+
+.tab_container {
+  width: 86%;
+  margin-bottom: 0;
+}
+
+.dksjeowi {
+  width: 86%;
+}
+
+.kjdhxowq {
+  width: 86%;
+}
+
+.grid-text img {
+  display: none;
+}
 }
 
 @media (max-width: 1024px) {
@@ -952,73 +955,63 @@ details[open] summary::before {
   display: none;
 }
 
-  .bxmzvnty {
-    gap:0rem;
-    line-height: 110%;
-    margin: 0 auto;
-    line-height: 110%;
-    max-width: 86%;
-    padding-top: 1rem;
-  }
-
-  .dash{
-    display: none;
-  }
-
-  .tab_header_item {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  justify-content: flex-start;
-  text-align: left;
+.bxmzvnty {
+  gap:0rem;
+  line-height: 110%;
+  margin: 0 auto;
+  line-height: 110%;
+  max-width: 86%;
+  padding-top: 1rem;
 }
 
+.dash{
+  display: none;
+}
 
-  .tab_header {
-    flex-direction: column;
-  }
+.tab_header_item {
+padding-left: 1.5rem;
+padding-right: 1.5rem;
+justify-content: flex-start;
+text-align: left;
+}
 
-  .footer{
-    display: none;
-  }
-
-  .mobile {
-    display: block;
-  }
-
-  .desktop {
-    display: none;
-  }
-
-  .indicator_container{
-    grid-template-columns: repeat(1, 1fr);
-    max-width: 86%;
-  }
-
-
-  .grid-text {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
+.tab_header {
   flex-direction: column;
-  }
+}
 
+.footer{
+  display: none;
+}
 
-  .tab_item.active {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-  }
+.mobile {
+  display: block;
+}
 
+.desktop {
+  display: none;
+}
 
-  .wmeofkzs {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  padding-bottom: 1.88rem;
-  padding-top: 1.88rem;
-  flex-wrap: wrap;
-  max-width: 66%;
-  margin: 0 auto;
-  gap: 0.3rem;
+.indicator_container{
+  grid-template-columns: repeat(1, 1fr);
+  max-width: 86%;
+}
+
+.indicator_container_one{
+  grid-template-columns: repeat(1, 1fr);
+  max-width: 86%;
+}
+
+.grid-text {
+display: flex;
+justify-content: center;
+gap: 1rem;
+flex-direction: column;
+}
+
+.tab_item.active {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .background-content {
@@ -1031,117 +1024,77 @@ details[open] summary::before {
   justify-content: center;
 }
 
-  h1 {
-    margin: 0;
-    font-family: 'b', sans-serif;
-    font-size: 3.5rem;
-    line-height: 120%;
-    background: var(--light-color);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-  }
-
+h1 {
+  margin: 0;
+  font-family: 'b', sans-serif;
+  font-size: 3.5rem;
+  line-height: 120%;
+  background: var(--light-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
   
-  h5 {
-    margin: 0;
-    font-family: 'b', sans-serif;
-    font-size: 2rem;
-    line-height: 120%;
-    background: var(--light-color);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-  }
+h5 {
+  margin: 0;
+  font-family: 'b', sans-serif;
+  font-size: 2rem;
+  line-height: 120%;
+  background: var(--light-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
 
+h2 {
+  font-family: 'b', sans-serif;
+  font-size: 1.1rem;
+  line-height: 100%;
+  color: var(--accent1-color);
+}
 
-  h2 {
-    font-family: 'b', sans-serif;
-    font-size: 1.1rem;
-    line-height: 100%;
-    color: var(--accent1-color);
-  }
-  
+.offer p {
+  font-family: 'l', sans-serif;
+  font-size: 1.3rem;
+  line-height: 120%;
+  background: linear-gradient(135deg, #ffffff, #ffffff);
+  background-clip: text;
+  margin-left: 0.1rem;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-  .offer p {
-    font-family: 'l', sans-serif;
-    font-size: 1.3rem;
-    line-height: 120%;
-    background: linear-gradient(135deg, #ffffff, #ffffff);
-    background-clip: text;
-    margin-left: 0.1rem;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-
-  .footer__container {
-    max-width: 86%;
-  }
-
+.footer__container {
+  max-width: 86%;
+}
 
 /* Разделительная линия */
-  .footer__line {
-    max-width: 86%;
-  }
+.footer__line {
+  max-width: 86%;
+}
 
 /* Нижняя часть */
-  .footer__bottom {
-    max-width: 86%;
-  }
+.footer__bottom {
+  max-width: 86%;
+}
 
-  /* .number img {
-    width: 8rem;
-  } */
+.indicator_item_number {
+  font-size: 3rem;
+}
 
-  .question-container p {
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
-
-  }
-  
-  .options-container {
-    grid-template-columns: 1fr; /* Одна колонка на мобильных */
-    gap: 1rem;
-  }
-  
-  .option, .option2, .option3 {
-    border-radius: 1rem;
-    /* Убираем min-width и max-width для гибкости */
-  }
-  
-  .feedback-container {
-    width: 86%;
-    font-size: 0.9rem;
-    margin-top: 1.5rem;
-  }
-  
-  .seta-esquerda {
-    left: 0.5rem;
-  }
-  
-  .seta-direita {
-    right: 0.5rem;
-  }
-
-  .indicator_item_number {
-    font-size: 3rem;
-  }
-
-  .indicator_item_number_mini {
-    font-size: 1.5rem;
-    font-family: "b";
-    line-height: 3.5rem;
-    display: flex;
-    align-items: flex-start;
-    gap: 1rem;
-    flex-wrap: wrap;
-  }
-  
+.indicator_item_number_mini {
+  font-size: 1.5rem;
+  font-family: "b";
+  line-height: 3.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  flex-wrap: wrap;
+}  
 }
 
 .benefit_container {
@@ -1229,7 +1182,6 @@ details[open] summary::before {
   justify-content: center;
   padding: 0;
   box-sizing: border-box;
-
 }
 
 .future_slider_item_img img {
@@ -1237,8 +1189,7 @@ details[open] summary::before {
   min-width: 100%;
   height: auto;
   object-fit: contain;
-  align-self: flex-start; /* Выравнивание изображения по верху */
-  
+  align-self: flex-start; /* Выравнивание изображения по верху */  
   padding: 0;
   box-sizing: border-box;
   padding-bottom: 2rem;
@@ -1320,8 +1271,6 @@ details[open] summary::before {
 .future_slider::-webkit-scrollbar {
   display: none;
 }
-
-
 
 .slider-container {
   position: relative;
@@ -1509,7 +1458,7 @@ details[open] summary::before {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: linear-gradient(180deg, rgba(83, 1, 224, 1) 0%, rgba(0, 128, 201, 1) 100%);
+  background: linear-gradient(180deg, #00ffbe 0%, #0080c9 100%);
   color: white;
   display: flex;
   align-items: center;
@@ -1560,7 +1509,7 @@ details[open] summary::before {
 .circle:hover::after {
   content: attr(data-tooltip);
   position: absolute;
-  background: linear-gradient(180deg, rgba(0, 128, 201, 1) 0%, rgba(83, 1, 224, 1) 100%);
+  background: linear-gradient(180deg, #0080c9 0%, #5301e0 100%);
   color: white;
   padding: 12px;
   top: calc(100% + 10px);
@@ -1618,7 +1567,7 @@ details[open] summary::before {
 
 .histogram-bar {
   width: 5rem;
-  background: linear-gradient(180deg, rgba(83, 1, 224, 1) 0%, rgba(0, 128, 201, 1) 100%);
+  background: linear-gradient(180deg, #0080c9 0%, #00ffbe 100%);
   position: relative;
   transition: height 0.5s ease;
   height: 0;
@@ -1714,11 +1663,16 @@ details[open] summary::before {
   box-sizing: border-box;
 }
 
+.map-container-img {
+  overflow: hidden;
+}
+
 .map-container img {
   margin: 0;
   transition: opacity 0.5s ease-in-out;
   position: relative;
   box-sizing: border-box;
+  transition: transform 0.5s ease; /* плавный переход */
 }
 
 .points-container {
@@ -1786,33 +1740,43 @@ details[open] summary::before {
 }
 
 .circle-map-2 {
-  top: 50%;
+  top: 40%;
   left: 52%;
 }
 
 .circle-map-3 {
-  top: 43%;
+  top: 30%;
   left: 77%;
 }
 
 .circle-map-4 {
-  top: 35%;
-  left: 70%;
+  top: 22%;
+  left: 68%;
 }
 
 .circle-map-5 {
-  top: 74%;
+  top: 60%;
   left: 47%;
 }
 
 .circle-map-6 {
-  top: 82%;
+  top: 67%;
   left: 50%;
 }
 
 .circle-map-7 {
-  top: 82%;
+  top: 67%;
   left: 60%;
+}
+
+.circle-map-8 {
+  top: 92%;
+  left: 70%;
+}
+
+.circle-map-9 {
+  top: 72%;
+  left: 10%;
 }
 
 .triangle-map {
@@ -1832,79 +1796,52 @@ details[open] summary::before {
 }
 
 .triangle-map-1 {
-  top: 82%;
+  top: 65%;
   left: 60%;
 }
 
 .triangle-map-2 {
-  top: 70%;
+  top: 40%;
   left: 60%;
 }
 
 .triangle-map-3 {
-  top: 50%;
-  left: 35%;
-}
-
-.triangle-map-4 {
-  top: 45%;
-  left: 65%;
-}
-
-.triangle-map-5 {
-  top: 35%;
-  left: 70%;
-}
-
-.triangle-map-6 {
-  top: 52%;
-  left: 52%;
-}
-
-.triangle-map-7 {
-  top: 55%;
+  top: 40%;
   left: 15%;
 }
 
-.triangle-map-8 {
+.triangle-map-4 {
   top: 25%;
   left: 60%;
 }
 
-.triangle-map-9 {
+.triangle-map-5 {
+  top: 33%;
+  left: 78%;
+}
+
+.triangle-map-6 {
   top: 30%;
   left: 65%;
 }
 
-.romb-map {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%235301e0'/%3E%3Cstop offset='100%25' stop-color='%230080c9'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M10 0 L20 10 L10 20 L0 10 Z' fill='url(%23grad)'/%3E%3C/svg%3E");
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  cursor: pointer;
-  z-index: 2;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.romb-map-1 {
-  top: 83%;
-  left: 55%;
-}
-
-.romb-map-3 {
+.triangle-map-7 {
   top: 20%;
-  left: 10%;
+  left: 5%;
+}
+
+.triangle-map-8 {
+  top: 20%;
+  left: 65%;
+}
+
+.triangle-map-9 {
+  top: 28%;
+  left: 73%;
 }
 
 /* Скрываем вторую картинку изначально */
-.map-img[src="map_zoom.png"] {
+.map-img[src="map_zoom.svg"] {
   display: none;
   opacity: 0;
 }
@@ -2179,7 +2116,6 @@ details[open] summary::before {
     filter: grayscale(0%);
   }
 }
-
 
 .background-content h1 {
   background: linear-gradient(to bottom, 
